added some new features

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <nav>
-        <a href="/">🏠 Home</a> |
-        <a href="/results/3">📊 Results</a> <!-- default to GW3, you can change dynamically -->
+        <a href="/">🏠 Home</a>
     </nav>
     <hr>
     {% block content %}{% endblock %}
